Time: 3 ms (83.29%), Space: 47.8 MB (58.87%) - LeetHub